cozserver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: sebcontents/cozserver:1.0
    ports:
    - containerPort: 80
